Fix 'learn about' link's position and spacing (Fix #462)

--- a/web/web/src/css/results.css
+++ b/web/web/src/css/results.css
@@ -1,5 +1,9 @@
 @import "variables.css";
 
+.learn-link a {
+  letter-spacing: 0.5px !important;
+}
+
 .table-light {
   table-layout: fixed;
 	border: 1px solid $greyLight;
